welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:7: error: (Int, Int, Int) does not take parameters
			if (T(z)==T(y)) {
                             ^greenTicket:19: error: type mismatch;
 found   : Unit
 required: Int
	else if (x==1) {
             ^