welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
	var x:Int=0;
	var T=(a,b,c);

	for (y<-0 to 2) {
		for (z<-0 to 2) {
			if (T(z)==T(y)) {
				x=x+1
			}
		}
	}

	if (x==3) {
		return 20
	}
	else if (x==2) {
		return 10
	}
	else if (x==1) {
		return 0
	}
}